--- a/index.html
+++ b/index.html
@@ -1,44 +1,78 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <link rel="stylesheet" href="homepage.css">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Talavera Restaurant – Authentic Mexican Cuisine</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
+  <!-- Header -->
+  <header>
+    <div class="logo">
+      <img src="images/icons/bluebird.png" alt="Talavera Logo">
+      <h1>Talavera Restaurant</h1>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="location.html">Location</a></li>
+        <li><a href="order.html">Order Online</a></li>
+      </ul>
+    </nav>
+  </header>
 
-<h2>Clickable Dropdown</h2>
-<p>Click on the button to open the dropdown menu.</p>
+  <!-- Hero Slideshow -->
+  <section class="hero">
+    <div class="slideshow-container" id="slideshow">
+      <div class="slide fade">
+        <img src="images/slideshow/slide1.jpg" alt="Talavera Tacos">
+      </div>
+      <div class="slide fade">
+        <img src="images/slideshow/slide2.jpg" alt="Mole Poblano">
+      </div>
+      <div class="slide fade">
+        <img src="images/slideshow/slide3.jpg" alt="Family Dining">
+      </div>
+    </div>
+  </section>
 
-<div class="dropdown">
-  <button onclick="myFunction()" class="dropbtn">Dropdown</button>
-  <div id="myDropdown" class="dropdown-content">
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
-    <a href="#contact">Contact</a>
-  </div>
-</div>
+  <!-- Motto -->
+  <section class="motto">
+    <h2>We are obsessed with authentic. Average is off the menu.</h2>
+  </section>
 
-<script>
-/* When the user clicks on the button,
-toggle between hiding and showing the dropdown content */
-function myFunction() {
-  document.getElementById("myDropdown").classList.toggle("show");
-}
+  <!-- Quick Info -->
+  <section class="info-cards">
+    <div class="card">
+      <h3>Hours</h3>
+      <p>Mon: Closed<br>Tue-Thu: 10AM-8PM<br>Fri-Sat: 11AM-10PM<br>Sun: 11AM-8PM</p>
+    </div>
+    <div class="card">
+      <h3>Call Us</h3>
+      <p>(845) 563-0552</p>
+    </div>
+    <div class="card">
+      <h3>Address</h3>
+      <p>1008 Little Britain Rd, New Windsor, NY 12553</p>
+    </div>
+  </section>
 
-// Close the dropdown if the user clicks outside of it
-window.onclick = function(event) {
-  if (!event.target.matches('.dropbtn')) {
-    var dropdowns = document.getElementsByClassName("dropdown-content");
-    var i;
-    for (i = 0; i < dropdowns.length; i++) {
-      var openDropdown = dropdowns[i];
-      if (openDropdown.classList.contains('show')) {
-        openDropdown.classList.remove('show');
-      }
-    }
-  }
-}
-</script>
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Talavera Restaurant | <a href="about.html">About Us</a></p>
+    <div class="social-icons">
+      <a href="https://www.facebook.com/p/Talavera-Restaurant-100063767791619/"><img src="images/icons/facebook.png" alt="Facebook"></a>
+      <a href="https://www.instagram.com/talaveramexicankitchen?igsh=d2drMnFwdTh5Y3I5"><img src="images/icons/instagram.png" alt="Instagram"></a>
+      <a href="https://www.yelp.com/biz/talavera-restaurant-new-windsor"><img src="images/icons/yelp.png" alt="Yelp"></a>
+      <a href="https://www.google.com/search?q=Talavera+Restaurant+Reviews"><img src="images/icons/google.png" alt="Google"></a>
+    </div>
+  </footer>
 
+  <script src="js/slideshow.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
